syntax = "proto3";

package microspb;

service MicrosService {
    rpc GetUserNameById(UserRequest) returns (UserResponse) {}
}

message UserRequest {
    int64 userId = 1;
}

message UserResponse {
    int32 en = 1;
    string name = 2;
}
